--- a/configs/feature/CONFIG.json
+++ b/configs/feature/CONFIG.json
@@ -1,5 +1,8 @@
 {
-  "RabbitMqServerHost":"//dev.tinyowl.com",
+  "RabbitMqServerHost":"54.169.112.112",
+  "RabbitMqProtocol":"amqp",
   "NodeServerPort": "8080",
-  "RabbitMqServerPort": "5672"
+  "RabbitMqServerPort": "4876",
+  "RabbitMqUsername": "restaurants_websockets",
+  "RabbitMqPassword": "rabbit@1234"
 }
