--- a/configs/production/CONFIG.json
+++ b/configs/production/CONFIG.json
@@ -1,5 +1,8 @@
 {
-  "RabbitMqServerHost": "//52.74.133.58",
+  "RabbitMqServerHost": "52.74.133.58",
+  "RabbitMqProtocol":"amqp",
   "NodeServerPort": "8080",
-  "RabbitMqServerPort": "14876"
+  "RabbitMqServerPort": "4876",
+  "RabbitMqUsername": "",
+  "RabbitMqPassword": ""
 }
