--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "amqplib": "^0.4.1",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
     "http": "0.0.0",
     "socket.io": "^1.4.5",
     "underscore": "^1.8.3"
